# nixie-in18

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  README_RU.md
cmake/: avr-gcc-toolchain.cmake
player/: CMakeLists.txt  Makefile_hr  Makefile_mo  Makefile_st  main.c
src/: CMakeLists.txt  alarm.c  alarm.h  bit-helper.h  config.h  display.c  display.h  events.h  main.c  main.cpp  sensor.c  sensor.h  show.c  show.h  show.hpp  test.c  user.c  user.h
src/bcd/: bcd.c  bcd.h  bcd_time.c  bcd_time.h
src/hal/: CMakeLists.txt  adc.h  display.c  display.h  iic.h  mcu.h  pwmi-hl.h  pwmi.c  pwmi.h  rtc.h  spi.c  spi.h
src/hal/avr/: adc.c  asm.h  mcu.c  pwmi.c  pwmi.h  spi.c  spi.h
src/hal/iic/: avr_twi.h  avr_twi_impl.h  iic.c
src/hal/rtc/: chip_m41t56.c  chip_m41t56.h  chip_m41t56_impl.h  chips.h  chips_impl.h  classic.h  corrector.h  rtc.c  rtc.h  service.c
src/hal/rtc/chips/: m41t56.ic  m41t56.ih
src/show/: CMakeLists.txt  alarm.cpp  childs.hpp  date.cpp  error.cpp  intro.cpp  set.cpp  set_alarm.cpp  set_caliber.cpp  set_date.cpp  set_time.cpp  show.cpp  time.cpp
src/tests/: 01-display.c  02-PWM.c
src/time/: time.c  time.h
src/tms/: CMakeLists.txt  aio.c  aio.h  custom.h  tms.c  tms.h
